@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.13 2002/12/07 21:35:11 cjep Exp $
+$NetBSD: distinfo,v 1.14 2003/03/06 11:43:28 is Exp $
 
 SHA1 (bind/8.3.4/bind-src.tar.gz) = 18f8a6af0ede72981f5a1e45462978450f4d9b74
 Size (bind/8.3.4/bind-src.tar.gz) = 1413654 bytes
@@ -7,10 +7,10 @@ Size (bind/8.3.4/bind-doc.tar.gz) = 1490246 bytes
 SHA1 (patch-aa) = f97a4c13a1ed957dab3012e6015f8070330f474d
 SHA1 (patch-ab) = 9bf580c08118b44b4f82810ea65cb82b55bb506c
 SHA1 (patch-ac) = 27fa07a5af995d296915825e0d2ef60498e58b0f
-SHA1 (patch-ad) = 029b0f8b535eb2dbc8dc054135b0802996e8dd67
+SHA1 (patch-ad) = 5c6cc311bc7bb066b89aba045493528bd140fe36
 SHA1 (patch-ae) = ed3b80dc19ff78e1caa8f9ac076e3370a10bfdd6
-SHA1 (patch-af) = 6b30cd30e8766b468ae1cc6027e83591d9d778a6
-SHA1 (patch-ag) = d2bd5d53c086261faf48671abf29d3a3a5e5c21c
-SHA1 (patch-ah) = b6bf7776cddd44eccbf4fd17de9dcd9b14197402
-SHA1 (patch-ai) = 0ced4c8938b1b491e345f2d8fec2170204bdd585
-SHA1 (patch-aj) = 94d1e884e32d7b52b50354d27af78dd6c5ff7669
+SHA1 (patch-af) = 1951d4cac373a8be939d2061b55aa8213bfc68a6
+SHA1 (patch-ag) = f07a8bb9c01c0108da4c4d5f573a1c989626f2f7
+SHA1 (patch-ah) = ad30cf5271b2cb34e617dc46d41c8e94e1b4d09d
+SHA1 (patch-ai) = dcae67de30521715c8e63bda7a67a480d40d9d8f
+SHA1 (patch-aj) = 6f250aea0666f80a2a6ab8a7e4023063322ac7e6
