@@ -1,4 +1,4 @@
-$NetBSD: patch-ag,v 1.2 2002/12/07 21:34:05 cjep Exp $
+$NetBSD: patch-ag,v 1.3 2003/03/06 11:43:28 is Exp $
 
 --- port/netbsd/Makefile.set.orig	Mon Jun 24 00:33:02 2002
 +++ port/netbsd/Makefile.set
@@ -18,7 +18,7 @@ $NetBSD: patch-ag,v 1.2 2002/12/07 21:34:05 cjep Exp $
 +'DESTEXEC=${PREFIX}/libexec'
 +'DESTMAN=${PREFIX}/man'
 +'DESTHELP=${PREFIX}/share/doc/bind8'
-+'DESTETC=${PREFIX}/etc'
++'DESTETC=${PKG_SYSCONFDIR}'
  'DESTRUN=/var/run'
  'LEX=lex -I'
  'YACC=yacc -d'
