@@ -1,4 +1,4 @@
-$NetBSD: patch-ah,v 1.1 2002/12/07 21:34:05 cjep Exp $
+$NetBSD: patch-ah,v 1.2 2003/03/06 11:43:28 is Exp $
 
 --- port/solaris/Makefile.set.gcc.orig	Tue Oct 19 00:45:13 1999
 +++ port/solaris/Makefile.set.gcc
@@ -17,10 +17,10 @@ $NetBSD: patch-ah,v 1.1 2002/12/07 21:34:05 cjep Exp $
 +'DESTEXEC=${PREFIX}/libexec'
 +'DESTMAN=${PREFIX}/man'
 +'DESTHELP=${PREFIX}/share/doc/bind8'
-+'DESTETC=${PREFIX}/etc'
++'DESTETC=${PKG_SYSCONFDIR}'
 +'DESTLIB=${PREFIX}/lib'
 +'DESTINC=${PREFIX}/include/bind'
-+'DESTRUN=${PREFIX}/etc'
++'DESTRUN=${PKG_SYSCONFDIR}'
  'LDS=:'
  'AR=/usr/ccs/bin/ar cru'
  'LEX=/usr/ccs/bin/lex'
